<resources>
	<string name="app_name">jukefox</string>
	<string name="search">Search</string>
	<string name="ok">OK</string>
	<string name="ok_i_got_it">OK, I got it</string>
	<string name="cancel">Cancel</string>
	<string name="scan_music_library">Scan music library</string>
	<string name="menu_settings">Settings</string>
	<string name="menu_help">Help</string>
	<string name="menu_about">About</string>
	<string name="rated_mode">rated mode</string>
	<string name="study_mode">study mode</string>
	<string name="skip_simulation_mode">skip simulation mode</string>
	<string name="pampalk_mode">pampalk mode</string>
	<string name="welcome">Welcome</string>
	<string name="first_start">First start</string>
	<string name="welcome_text">Hi, I\'m jukefox, the mobile music expert. During
		the next minutes I will try to catch album covers from the web and get
		music similarity information for your songs. It\'s highly recommended
		to activate an Internet connection before continuing.</string>
	<string name="update_text_and_question">For a successful import of your
		music, your songs
		need CORRECT ID3 TAGS FOR ARTIST, ALBUM AND
		TITLE. The import requires
		an active internet connection (WLAN, if
		possible) and may take a long
		time. Do you want to start it now?
	</string>
	<string name="yes">Yes</string>
	<string name="no">No</string>
	<string name="no_exit">No (exit)</string>
	<string name="can_press_home">Thanks for your patience.</string>
	<string name="about">About</string>
	<string name="about_info">Copyright DISCO @ ETH
		Zürich\nwww.jukefox.org\n\nbased on last.fm
		data and
		MusicExplorer\nwww.musicexplorer.org\nwww.last.fm\n\nIcons by
		Mathias
		Kober\n\nContact:\nmusicexplorer@tik.ee.ethz.ch</string>
	<string name="loading">Loading...</string>
	<string name="is_played_by_jukefox">is played by jukefox</string>
	<string name="artist_title_place_holder">Artist - Title</string>
	<string name="shuffle">Shuffle</string>
	<string name="repeat">Repeat all songs</string>
	<string name="similar">Play similar songs</string>
	<string name="smart_shuffle">Smart shuffle</string>
	<string name="playlist_menu">Playlist menu:</string>
	<string name="artistaddmenu">Add songs of this artist to the playlist:</string>
	<string name="genreaddmenu">Add songs of this genre to the playlist:</string>
	<string name="load_playlist">Load playlist</string>
	<string name="load">Load</string>
	<string name="save_playlist">Save playlist</string>
	<string name="save">Save</string>
	<string name="clear_playlist">Clear playlist</string>
	<string name="save_playlist_as">Save playlist as:</string>
	<string name="select_playlist">Select a playlist to load:</string>
	<string name="select_video_playlist">Select the playlist you want to display the live
		videos</string>
	<string name="remove_song_from_playlist">Remove song from playlist</string>
	<string name="show_album">Show album</string>
	<string name="go_to_album">Go to album</string>
	<string name="show_similar_songs">Show similar songs</string>
	<string name="song_menu">Song menu:</string>
	<string name="select_list">Please select a list:</string>
	<string name="artists">Artists</string>
	<string name="albums">Albums</string>
	<string name="songs">Songs</string>
	<string name="genres">Genres</string>
	<string name="tags">Tags</string>
	<string name="play">Play</string>
	<string name="go_to">Go to</string>
	<string name="search_result_title1">No</string>
	<string name="search_result_title2">on the device. Did you mean:</string>
	<string name="search_screen_title">Search for Artist/Title</string>
	<string name="search_titles">Titles</string>
	<string name="search_artists">Artists</string>
	<string name="famous_artists">Famous artists</string>
	<string name="results">Results:</string>
	<string name="songs_might_be_similar">These songs might be similar to </string>
	<string name="nothing_found">Sorry, Nothing was found for</string>
	<string name="album_info">Album Info:</string>
	<string name="artist">Artist</string>
	<string name="album">Album</string>
	<string name="haptic_feedback">vibration feedback</string>
	<string name="draw_floor">draw floor</string>
	<string name="always_notify">show a notification</string>
	<string name="you_want_an_update">So, you want an update...</string>
	<string name="incrementally_or_everything">You want to update incrementally (just look for new
		files; takes less time) or update everything (detects changes in tags
		or album covers)?</string>
	<string name="incrementally">Incrementally</string>
	<string name="update_everything">Update everything</string>
	<string name="title">Title</string>
	<string name="menu_quit">Quit</string>
	<string name="scrobble_to_lastfm">scrobble to last.fm</string>
	<string name="username">username</string>
	<string name="password">password</string>
	<string name="warning">Warning</string>
	<string name="could_not_connect_audioscrobbler">Could not connect to Audioscrobbler. Either
		username and password are wrong, or you don\'t have an active Internet
		connection.</string>
	<string name="ok_i_am_aware_of_it">OK, I am aware of it</string>
	<string name="traffic_warning1">jukefox connects to the Internet after listening to
	</string>
	<string name="traffic_warning2">song(s). Be aware, that depending on your contract
		this might generate extra costs.</string>
	<string name="ok_use_it_anyway">OK, use it anyway</string>
	<string name="settings_similar">Settings for playing similar songs:</string>
	<string name="settings_similar_desc1">Do not repeat an artist for</string>
	<string name="settings_similar_desc2">subsequent songs</string>
	<string name="apply">Apply</string>
	<string name="widget_start_text">Click the logo to start.</string>
	<string name="menu_hide">Hide</string>
	<string name="ask_if_log">In order to improve jukefox and to do further
		usability research, we would like to collect some anonymous usage
		data. Is this OK for you? If you answer yes we will ask again before
		we send it (see FAQ on jukefox.org for more information).</string>
	<string name="send_log_question">We collected anonymous usage data (if you used tags
		or used the map etc.; see FAQ on jukefox.org for more info). We
		would you like to send them now. Is this OK?</string>
	<string name="ask_later">Ask later</string>
	<string name="never_ask">Never, ever ask again</string>
	<string name="send_log_question2">You can have a look at the log file on your SD-card
		named \'.jukefoxUsageLog.txt\'. Are we allowed to ask you later if you
		want to send it?</string>
	<string name="pity">What a pity!</string>
	<string name="do_usage_log">log usage data (see FAQ on jukefox.org)</string>
	<string name="path_validation_failed_msg">Error: Could not access music file!</string>
	<string name="log_size">Log size</string>
	<string name="playartisttext">Play all songs of this artist</string>
	<string name="appendartisttext">Append all songs of this artist to the playlist
	</string>
	<string name="insertartisttext">Insert all songs of this artist into the playlist
	</string>
	<string name="playgenretext">Play all songs of this genre</string>
	<string name="appendgenretext">Append all songs of this genre to the playlist
	</string>
	<string name="insertgenretext">Insert all songs of this genre into the playlist
	</string>
	<string name="really_cancel">Cancel?</string>
	<string name="really_cancel_text">Do you really want to cancel the update?</string>
	<string name="info">Info</string>
	<string name="update_again">Update cancelled. Please run the update again to
		use the application.</string>
	<string name="settings_shuffle">Select shuffle mode</string>
	<string name="shuffle_playlist">Shuffle over playlist</string>
	<string name="shuffle_collection">Shuffle over collection</string>
	<string name="no_sd_card_available">No songs could be read. Make sure your SD card with
		music files is inserted and was properly unmounted from the computer.
	</string>
	<string name="error">Error</string>
	<string name="use_zoom_bar">Wipe your finger on the zoom bar for faster and
		more precise control.</string>
	<string name="select_play_mode">Select a Play-Mode</string>
	<string name="show_tipps">Show tipps at startup</string>
	<string name="tip_title">Tip:</string>
	<string name="use_jukefox">You can use jukefox now...</string>
	<string name="jukefox_started">jukefox has started</string>
	<string name="similar_songs_for">Similar Songs for</string>
	<string name="please_help">Please Help</string>
	<string name="slow_album">Run the update again (Settings->update) to make
		album loading faster</string>
	<string name="send_every_n1">Packet size</string>
	<string name="send_every_n2">songs</string>
	<string name="pause_scrobbling">hold back sending</string>
	<string name="scrobble_pause_activated">jukefox will locally store the scrobble infos. They
		are
		not sent until you deactivate this option</string>
	<string name="fullscreen">Hide notification bar</string>
	<string name="please_restart">Please restart jukefox to apply the settings.
	</string>
	<string name="sleep">Sleep (auto stop)</string>
	<string name="sleep_desc1">Stop music after</string>
	<string name="sleep_desc2">minutes</string>
	<string name="dont_sleep">Don\'t sleep</string>
	<string name="sleep_menu">Sleep Menu</string>
	<string name="sleep_toast1">Music will stop in</string>
	<string name="sleep_toast2">minutes (After a song has finished).</string>
	<string name="show_zoom_bar">Show zoom bar</string>
	<string name="always_to_cur_playing_album">Always go to currently playing album</string>
	<string name="auto_show_cover">Automatically show cover art instead of playlist
	</string>
	<string name="explain_why_import">jukefox offers play modes that are based on music
		similarity. To provide this functionality, we have set up a huge
		database containing information about the relationships among songs
		and artists. In the import step, we fetch the data relevant to your
		collection from our server. To do so, we send artist name and title of
		your songs to our server. The information exchange is done
		anonymously, and the data is not passed on to any third parties.
	</string>
	<string name="show_artist">Show artist</string>
	<string name="append_to_playlist">Append to playlist</string>
	<string name="insert_into_playlist">Insert into playlist</string>
	<string name="show_genre_artists">Show artists for genre</string>
	<string name="show_genre_albums">Show albums for genre</string>
	<string name="show_genre_songs">Show songs for genre</string>
	<string name="video_playlist">Load video playlist</string>
	<string name="continuetext">Do you want to continue reproducing the next song?
	</string>
	<string name="cont">Continue</string>
	<string name="back_to_menu">menu</string>
	<string name="play_same_video">Play the same video again</string>
	<string name="take_a_tour_dialog">In the first minutes jukefox will be a little bit
		slower and not all features are available due to the library import in
		the background. We recommend that you use this time to take a tour and
		learn how to use jukefox. Is that OK?</string>
	<string name="take_a_tour_now">Take a tour now</string>
	<string name="take_a_tour_later">I\'ll do it later</string>
	<string name="please_read">PLEASE READ</string>
	<string name="feedback_dialog_text">Thanks for your using jukefox. If you have any
		problem or suggestions for jukefox, please contact us by mail prior to
		giving a bad rating. It is much easier to respond to a mail than to a
		comment in the Android Market.</string>
	<string name="rate_app_in_market">Rate or comment in the Market</string>
	<string name="send_mail_to_developers">Send a mail to the developers</string>
	<string name="cancel_import_question">Do you want jukefox to finish the library scan in the background (recommended)?</string>
	<string name="cancel_import">No</string>
	<string name="continue_import">Yes</string>
	<string name="delete_song">Delete song</string>
</resources>