<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="fill_parent"
  android:layout_height="wrap_content">
  <View android:layout_width="2dip" 
  	android:layout_height="wrap_content"
  	android:layout_weight="1"/>
  
 <LinearLayout
  android:orientation="vertical"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:background="@drawable/d055_dialog_background"> 
	<TextView 
		android:text="@string/feedback_dialog_text"
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content"
		android:paddingTop="10dip"
		android:paddingBottom="10dip"
		android:paddingLeft="10dip"
		android:paddingRight="10dip"
		android:textAppearance="?android:attr/textAppearanceMedium"
		android:layout_gravity="center"/>
  	
	<Button android:text="@string/rate_app_in_market" 
		android:id="@+id/marketButton" 
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content"
		android:layout_gravity="center"/>
	
	<Button android:text="@string/send_mail_to_developers"
		android:id="@+id/mailButton"
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content"
		android:layout_gravity="center"/>
		
	<Button android:text="@string/cancel" 
		android:id="@+id/cancelButton" 
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content"
		android:layout_gravity="center"/>
		
	
</LinearLayout>
	
	<View android:layout_width="2dip" 
	  	android:layout_height="wrap_content"
	  	android:layout_weight="1"/>
  	
</LinearLayout>