<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent">
  <View android:layout_width="2dip" 
  	android:layout_height="wrap_content"
  	android:layout_weight="1"/>
  
 <LinearLayout
  android:orientation="vertical"
  android:layout_width="wrap_content"
  android:layout_height="wrap_content"
  android:background="@drawable/d055_dialog_background"> 
  
  	<TextView 
		android:id="@+id/dialogText" 
		android:text="@string/please_read"
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content"
		android:paddingLeft="10dip"
		android:textAppearance="?android:attr/textAppearanceMedium"
		android:layout_gravity="center"
		android:background="#aa666666"
		android:textColor="#ff00ff00"/>
  
	<TextView 
		android:id="@+id/dialogText" 
		android:text="@string/take_a_tour_dialog" 
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content"
		android:paddingTop="10dip"
		android:paddingBottom="10dip"
		android:paddingLeft="10dip"
		android:paddingRight="10dip"
		android:textAppearance="?android:attr/textAppearanceMedium"
		android:layout_gravity="center"/>
		
	<LinearLayout
	  android:orientation="horizontal"
	  android:layout_width="wrap_content"
	  android:layout_height="wrap_content"
	  android:layout_gravity="center"> 
		<Button android:text="@string/take_a_tour_now" 
			android:id="@+id/takeATourNowButton" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			android:layout_marginLeft="10dip"
			android:layout_marginRight="10dip"
			android:minWidth="60dip"
			android:layout_gravity="center"/>
			
		<Button android:text="@string/take_a_tour_later" 
			android:id="@+id/takeATourLaterButton"  
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			android:layout_marginLeft="10dip"
			android:layout_marginRight="10dip"
			android:minWidth="60dip"
			android:layout_gravity="center"/>
		</LinearLayout>
	</LinearLayout>
	<View android:layout_width="2dip" 
	  	android:layout_height="wrap_content"
	  	android:layout_weight="1"/>
  	
</LinearLayout>
