<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent">
  <View android:layout_width="2dip" 
  	android:layout_height="wrap_content"
  	android:layout_weight="1"/>
  
 <LinearLayout
  android:orientation="vertical"
  android:layout_width="wrap_content"
  android:layout_height="wrap_content"
  android:background="@drawable/d055_dialog_background"> 
  
	<TextView 
		android:text="@string/cancel_import_question" 
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content"
		android:paddingTop="10dip"
		android:paddingBottom="10dip"
		android:paddingLeft="10dip"
		android:paddingRight="10dip"
		android:textAppearance="?android:attr/textAppearanceMedium"
		android:layout_gravity="center"/>
		
	<LinearLayout
	  android:orientation="horizontal"
	  android:layout_width="wrap_content"
	  android:layout_height="wrap_content"
	  android:layout_gravity="center"> 
			
		<Button android:text="@string/continue_import" 
			android:id="@+id/continueImportButton"  
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			android:layout_marginLeft="10dip"
			android:layout_marginRight="10dip"
			android:minWidth="60dip"
			android:layout_gravity="center"/>
			
		<Button android:text="@string/cancel_import" 
			android:id="@+id/cancelImportButton" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			android:layout_marginLeft="10dip"
			android:layout_marginRight="10dip"
			android:minWidth="60dip"
			android:layout_gravity="center"/>
			
		</LinearLayout>
	</LinearLayout>
	<View android:layout_width="2dip" 
	  	android:layout_height="wrap_content"
	  	android:layout_weight="1"/>
  	
</LinearLayout>
